Added conditional statement to run if pull request is merged or if pushed to main directly

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,9 @@ on:
   push:
     branches: ["main"]
 
-  # Runs on pull requests targeting the default branch
+  # Runs on pull request approval targeting the default branch
   pull_request:
+    types: [closed]
     branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -28,6 +29,7 @@ concurrency:
 jobs:
   # Single deploy job since we're just deploying
   deploy:
+    if: github.event.pull_request.merged == true || github.event_name == 'push'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
